fix: css trick to avoid layout shift

--- a/pages/PostDetail.module.scss
+++ b/pages/PostDetail.module.scss
@@ -112,6 +112,22 @@
   }
 }
 
+.content {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.5s ease-in-out 0s;
+  transition-property: opacity, transform;
+  transform: translateY(40px);
+}
+
+.contentReady {
+  max-height: none;
+  overflow: auto;
+  opacity: 1;
+  transform: translateY(0);
+}
+
 .publishedAt {
   font-size: 0.9em;
   color: var(--theme-color);
